--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body style="background-color: lightsalmon;">
     <h1><u><b>css-gridtasks</b></u></h1>
     <ol>
- <li> <a href="../css/cssgrid1t.html">gridtask-1</a></li> 
- <li> <a href="../css/cssgrid2t.html">gridtask-2</a></li>  
- <li>  <a href="../css/cssgrid3t.html">gridtask-3</a></li> 
+ <li> <a href="./cssgrid1t.html">gridtask-1</a></li> 
+ <li> <a href="./cssgrid2t.html">gridtask-2</a></li>  
+ <li>  <a href="./cssgrid3t.html">gridtask-3</a></li> 
 </ol>
 </body>
 </html>
